<resources>
    <string name="app_name">Val Thorens Webcams</string>

    <string name="main_title">Webcams in Val Thorens</string>
    <string name="main_desc">Click on an image to view the webcam at that location</string>
    <string name="main_desc_icon">Webcam location</string>
    <string name="main_about">About</string>

    <string name="camera_1_funitel_3_vallees">Funitel 3 Vallées</string>
    <string name="camera_2_de_la_maison">De La Maison</string>
    <string name="camera_3_les_2_lacs">Les 2 Lacs</string>
    <string name="camera_4_funitel_de_thorens">Funitel De Thorens</string>
    <string name="camera_5_la_tyrolienne">La Tyrolienne</string>
    <string name="camera_6_plan_bouchet">Plan Bouchet</string>
    <string name="camera_7_livecam_360">Livecam 360&#176;</string>
    <string name="camera_8_plein_sud">Plein Sud</string>
    <string name="camera_9_tsd_moutière">TSD Moutière</string>
    <string name="camera_10_cime_caron">Cime Caron</string>

    <string name="map_title">Click on a circle to choose that webcamera</string>
    <string name="map_desc">Map over Val Thorens</string>

    <string name="webcam_title">Camera name goes here</string>
    <string name="webcam_date">Camera date goes here</string>
    <string name="webcam_desc">Webcam image from Val Thorens</string>

    <string name="about_image">Image from Val Thorens 2016, &#169; Rikard Teodorsson</string>
    <string name="about_source">Webcams from valthorens.com</string>
    <string name="about_author">App made by Rikard Teodorsson</string>
    <string name="about_questions">Questions or suggestion for improvements? Send an email to \"contact@swecookie.se\"</string>
    <string name="about_version">Version 1.2</string>
    <string name="about_return">Return</string>

    <string name="privacy_policy_message">By using the app, you agree to the privacy policy and the usage of third-party cookies.</string>
    <string name="pp_title">Privacy Policy</string>
    <string name="pp_content">Last updated: 2017-12-12\n\n
        Rikard Teodorsson (\"us\", \"we\", or \"our\") operates the application \"Val Thorens Webcams\" (the \"App\").
        This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the App.\n\n

        By using the App, you agree to the collection and use of information in accordance with this policy.\n\n

        <b>Information Collection And Use</b>\n
        No personally identifiable information will be collected and/or shared while you use the App.\n\n

        <b>Third Party Services, Ads &amp; Cookies</b>\n
        We use third party services to collect usage statistics and to serve ads. These include:\n
    </string>
    <string name="pp_content_2">
        <b>- Google Analytics and Firebase</b>: We use Firebase to collect statistics on how many times the user has clicked a button in the App, (Firebase Core).\n
        <b>- Cookies, AdMob and Firebase</b>: We use banner ads in the app, (Firebase ads) to keep it free.
    </string>
    <string name="pp_content_3">
        - Third parties, including Google, use cookies to serve ads based on the user’s prior visits to the App and other websites.\n
        - Google\'s use of advertising cookies enables it and its partners to serve ads to users of the App, based on their visit to the App and/or other sites on the Internet.\n
        - Other third parties may also display ads in the App. For a full list, visit adwords-vendors (https://developers.google.com/third-party-ads/adwords-vendors) and adx-vendors (https://developers.google.com/third-party-ads/adx-vendors).\n
        - The user can opt out of personalized advertising by visiting google.com/settings/ads and/or aboutads.info.\n
    </string>
    <string name="pp_content_4">
        <b>Cookies</b>
    </string>
    <string name="pp_content_5">
        - Cookies are files with small amount of data, which may include an anonymous unique identifier. Cookies are sent to your device from a web site and stored on your device\'s internal storage.\n
        - By using the app, you agree to third-parties storing cookies on your device. If you do not agree with the usage of cookies, the app will not be usable.\n\n
    </string>
    <string name="pp_content_6">

        <b>Changes To This Privacy Policy</b>\n
        This Privacy Policy is effective as of 2017-07-12 and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.\n\n
        We reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. Your continued use of the Service after we post any modifications to the Privacy Policy on this page will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.\n\n
        If we make any material changes to this Privacy Policy, we will notify you either through the app, or by placing a prominent notice on our website (swecookie.se/apps/privacy-policies).\n\n

        <b>Contact Us</b>\n
        If you have any questions about this Privacy Policy, please contact us at contact@swecookie.se.
</string>

</resources>
