<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkRed"
    tools:context="se.swecookie.valthorens.PrivacyPolicyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp_title"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="140dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp_content"
            android:textColor="@color/colorTextLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/pp_content_2"
            android:textColor="@color/colorTextLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp_content_3"
            android:paddingLeft="40dp"
            android:paddingStart="40dp"
            android:textColor="@color/colorTextLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp_content_4"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/colorTextLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp_content_5"
            android:paddingLeft="40dp"
            android:paddingStart="40dp"
            android:textColor="@color/colorTextLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pp_content_6"
            android:textColor="@color/colorTextLight" />

    </LinearLayout>

</ScrollView>
